--- a/index.html
+++ b/index.html
@@ -1203,6 +1203,7 @@
                         Oliver  Groth<br>
                     </div>
                     <div class="col-4 col-4-medium">
+                        Tom Gunter<br>
                         Kai Han<br>
                         Tengda  Han<br>
                         Yana    Hasson<br>
