--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 					</div>
 					
 					<div class="col-2 col-4-medium">
-                        (<span class="icon fa-video-camera"> <a href="https://slideslive.com/38938275/can-preregistration-lead-to-better-reproducibility-in-ml-research">Video</a>)
+                        (<span class="icon fa-video-camera"> <a href="https://slideslive.com/38938275/can-preregistration-lead-to-better-reproducibility-in-ml-research">Video</a>, <a href="slides/jpineau-NeurIPSwsPreregistration-dec20.pdf">Slides</a>)
 						<span class="image fit"><img src="images/pineau.jpg" alt="Joelle Pineau"></span>
 						<h4><a href="https://www.cs.mcgill.ca/~jpineau/">Joelle Pineau</a></h4>
 						<p>FAIR, MILA, McGill</p>
 					</div>
 
 					<div class="col-2 col-4-medium">
-                        (<span class="icon fa-video-camera"> <a href="https://slideslive.com/38938273/where-is-machine-learning-going">Video</a>)
+                        (<span class="icon fa-video-camera"> <a href="https://slideslive.com/38938273/where-is-machine-learning-going">Video</a>, <a href="slides/francis.pdf">Slides</a>)
 						<span class="image fit"><img src="images/bach.jpg" alt="Francis Bach"></span>
 						<h4><a href="https://www.di.ens.fr/~fbach/">Francis Bach</a></h4>
 						<p>INRIA</p>
@@ -68,7 +68,7 @@
 					</div>
 
 					<div class="col-2 col-4-medium">
-                        (<span class="icon fa-video-camera"> <a href="https://slideslive.com/38938270/the-turing-way-transparent-research-through-the-scientific-lifecycle">Video</a>)
+                        (<span class="icon fa-video-camera"> <a href="https://slideslive.com/38938270/the-turing-way-transparent-research-through-the-scientific-lifecycle">Video</a>, <a href="slides/Whitaker_TuringWay_NeurIPSPreregistration_November2020.pdf">Slides</a>)
 						<span class="image fit"><img src="images/whitaker.jpg" alt="Kirstie Whitaker"></span>
 						<h3><a href="https://www.turing.ac.uk/people/researchers/kirstie-whitaker">Kirstie Whitaker</a></h3>
 						<p>Alan Turing Institute, Cambridge University</p>
