--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <script type="text/javascript">
                  // var timezone = encodeURIComponent(jstz.determine().name()); 
                  var timezone = Intl.DateTimeFormat().resolvedOptions().timeZone;
-                 var pref = '<iframe src="https://calendar.google.com/calendar/embed?mode=agenda&src=NzBhOG01dWs0N2lhNmhicmYzcW5paXVxZzRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&ctz=';
+                 var pref = '<iframe src="https://calendar.google.com/calendar/embed?mode=agenda&dates=20201211/20201212&src=NzBhOG01dWs0N2lhNmhicmYzcW5paXVxZzRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&ctz=';
                  var suff = '" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>';
                  var iframe_html = pref + timezone + suff;
                  document.getElementById('calendar-container').innerHTML = iframe_html;
