--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
                             </td>
                             <td>
                                 <a href="https://youtu.be/RJeuW4MXKDU">Video</a>
+                                <a href="https://slideslive.com/38938269/contrastive-selfsupervised-learning-for-skeleton-action-recognition">Oral</a>
                             </td>
                             <td>
                                 <a href="posters_20neurips/21_poster.png">Poster</a>
@@ -424,6 +425,7 @@
                             </td>
                             <td>
                                 <a href="https://youtu.be/7DUqITmtqJ8">Video</a>
+                                <a href="https://slideslive.com/38941993/pca-retargeting-encoding-linear-shape-models-as-convolutional-mesh-autoencoders">Oral</a>
                             </td>
                             <td>
                                 <a href="posters_20neurips/31_poster.png">Poster</a>
@@ -446,6 +448,7 @@
                             </td>
                             <td>
                                 <a href="https://youtu.be/0utTI1KiEfs">Video</a>
+                                <a href="https://slideslive.com/38941995/testing-the-genomic-bottleneck-hypothesis-in-hebbian-metalearning">Oral</a>
                             </td>
                             <td>
                                 <a href="posters_20neurips/33_poster.png">Poster</a>
@@ -556,6 +559,7 @@
                             </td>
                             <td>
                                 <a href="https://youtu.be/HQp0UeVH2No">Video</a>
+                                <a href="https://slideslive.com/38941997/policy-convergence-under-the-influence-of-antagonistic-agents-in-markov-games">Oral</a>
                             </td>
                             <td>
                                 <a href="posters_20neurips/41_poster.png">Poster</a>
@@ -600,6 +604,7 @@
                             </td>
                             <td>
                                 <a href="https://youtu.be/2c66QVAqA6o">Video</a>
+                                <a href="https://slideslive.com/38938272/confronting-domain-shift-in-trained-neural-networks">Oral</a>
                             </td>
                             <td>
                                 <a href="posters_20neurips/44_poster.png">Poster</a>
@@ -707,6 +712,7 @@
                             </td>
                             <td>
                                 <a href="papers_20neurips/55_paper.pdf">PDF</a>
+                                <a href="papers_20neurips/55_suppl.pdf">Supmat</a>
                             </td>
                             <td>
                                 <a href="https://youtu.be/zXa0JaqRxsQ">Video</a>
@@ -751,6 +757,7 @@
                             </td>
                             <td>
                                 <a href="papers_20neurips/57_paper.pdf">PDF</a>
+                                <a href="papers_20neurips/57_suppl.pdf">Supmat</a>
                             </td>
                             <td>
                                 <a href="https://youtu.be/0B_kXJgvmj4">Video</a>
@@ -820,6 +827,7 @@
                             </td>
                             <td>
                                 <a href="https://youtu.be/po5oB-P8Ppo">Video</a>
+                                <a href="https://slideslive.com/38941999/unsupervised-resource-allocation-with-graph-neural-networks">Oral</a>
                             </td>
                             <td>
                                 <a href="posters_20neurips/60_poster.png">Poster</a>
@@ -861,6 +869,7 @@
                             </td>
                             <td>
                                 <a href="papers_20neurips/67_paper.pdf">PDF</a>
+                                <a href="papers_20neurips/67_suppl.pdf">Supmat</a>
                             </td>
                             <td>
                                 <a href="https://youtu.be/WoKitd4XSvs">Video</a>
@@ -930,6 +939,7 @@
                             </td>
                             <td>
                                 <a href="https://youtu.be/TxgLqE5nQlQ">Video</a>
+                                <a href="https://slideslive.com/38942001/fedperf-a-practitioners-guide-to-performance-of-federated-learning-algorithms">Oral</a>
                             </td>
                             <td>
                                 <a href="posters_20neurips/76_poster.png">Poster</a>
@@ -996,6 +1006,7 @@
                             </td>
                             <td>
                                 <a href="https://youtu.be/oRccOg9PTQ0">Video</a>
+                                <a href="https://slideslive.com/38942002/on-the-lowdensity-latent-regions-of-vaebased-language-models">Oral</a>
                             </td>
                             <td>
                                 <a href="posters_20neurips/81_poster.png">Poster</a>
