--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 			<div class="inner">
 				<span class="icon major style0 fa fa-area-chart"></span>
 				<h2 style="background-color: rgba(0,0,0,0.1)">The <strong style="color:#FCCA46;">pre-registration experiment</strong>: <br>an alternative publication model for machine learning research</h2>
-				<h3 style="background-color: rgba(0,0,0,0.1)"><a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a> workshop, on December 11 (from 9:15AM, New York time)</h3>
-                <h3 style="background-color: rgba(0,0,0,0.1)">On the day of the workshop, please join the live streaming at <br><a href="https://neurips.cc/virtual/2020/protected/workshop_16158.html">https://neurips.cc/virtual/2020/protected/workshop_16158.html</a> <br>using your NeurIPS registration credentials.</h3>
+				<h3 style="background-color: rgba(0,0,0,0.1)">This workshop took place at <a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a>, on December 11</h3>
+                <h3 style="background-color: rgba(0,0,0,0.1)">Links to the content of the workshop can be found here: <br><a href="https://neurips.cc/virtual/2020/protected/workshop_16158.html">https://neurips.cc/virtual/2020/protected/workshop_16158.html</a>.</h3>
+                <h3 style="background-color:red">The PMLR submission deadline has been extended to 7th May 2021, 23:59, Anwyhere on Earth timezone</h3>
 			</div>
 		</section>
 		<!-- ------------------------------------------------------------------------------------------------------->
@@ -155,6 +156,7 @@
 				<header class="major special">
 					<h2>Call for Papers</h2>
 				</header>
+                <del>
 				<div class="container">
 					<p>
 						<strong>What is pre-registration and how does it improve peer review?</strong>
@@ -174,6 +176,10 @@
 						Pre-registered papers will be published at the workshop. Authors will then have the opportunity to submit the results paper to the Proceedings of Machine Learning Research (<a href="http://proceedings.mlr.press/">PMLR</a>), a sister publication to the Journal of Machine Learning Research (<a href="https://www.jmlr.org/">JMLR</a>). The review process for this second stage will aim to ensure that the authors have performed a good-faith attempt to complete the experiments described in their proposal paper.
 					</p>
 				</div>
+            </del>
+				<div class="container">
+                    Please note that the workshop and pre-registration phase has now taken place. <strong style="color:orange">The results phase is now active</strong> (see below).
+				</div>
 			</div>
 		</section>
 		<!-- ------------------------------------------------------------------------------------------------------->
@@ -187,6 +193,7 @@
 					These stages reflect the exploratory (hypothesis generation) and confirmatory (hypothesis testing) phases of research.</p>
 
 					<h3>Proposal paper</h3>
+                    <del>
 					<ul>
 						<li>Read our <a href="author-kit/neurips2020_preregistration_template.zip"><strong>mini-tutorial/template</strong></a> (<a href="author-kit/tutorial.pdf">PDF</a>) &mdash; it serves as a paper template, describes the submission process and the intended spirit of a pre-registration.</li>
 						<li><strong>Submit</strong> your paper anonymously to <a href="https://cmt3.research.microsoft.com/NeurIPSWorkshopPrereg2020">CMT</a>.
@@ -199,6 +206,7 @@
 						<li><strong>Decisions will be sent to authors by October 30th</strong>.</li>
 						<li><strong>On the day of the workop (December 11th, <strong style="color:red">remote</strong>, from 9:20AM New York time))</strong>, authors will present their proposals and (optionally) their preliminary results.</li>
 					</ul>
+                    </del>
 
 					<h3>Results paper</h3>
 					<ul>
@@ -206,9 +214,9 @@
 					<li>The results will be presented in second document known as the results paper.
 <!--						<strong>The results paper consists of just the &ldquo;experimental results&rdquo; and &ldquo;conclusions&rdquo; sections of standard publications</strong>.-->
 					This will be appended to the proposal paper to form the complete document.
-					The deadline for the results paper is going to be in April, 2021 (tentative).</li>
-					<li>We will then support and encourage the final results to be published at the <a href="http://proceedings.mlr.press/">PMLR</a> in combination with the pre-registered paper in April 2021 (tentative).</li>
-					<li>In case of interest, we will also organise a second virtual meeting at the end of April 2021 to discuss the experimental results and the lesssons learned.</li>
+					The deadline for the results paper is going to be in <del>April, 2021 (tentative)</del> <strong style="color:red">The deadline has been extended to Friday 7th May, 23:59, Anywhere on Earth time zone.</strong></li>
+					<li>We will then support and encourage the final results to be published at the <a href="http://proceedings.mlr.press/">PMLR</a> in combination with the pre-registered paper.</li>
+					<li><del>In case of interest, we will also organise a second virtual meeting at the end of April 2021 to discuss the experimental results and the lesssons learned.</del> (the next steps are currently under consideration)</li>
 					</ul>
 				</div>
 			</div>
