--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 					This will be appended to the proposal paper to form the complete document.
 					The deadline for the results paper is going to be in <del>April, 2021 (tentative)</del> <strong style="color:red">The deadline has been extended to Friday 7th May, 23:59, Anywhere on Earth time zone.</strong></li>
 					<li>We will then support and encourage the final results to be published at the <a href="http://proceedings.mlr.press/">PMLR</a> in combination with the pre-registered paper.</li>
-					<li><del>In case of interest, we will also organise a second virtual meeting at the end of April 2021 to discuss the experimental results and the lesssons learned.</del> (the next steps are currently under consideration)</li>
+					<li><del>In case of interest, we will also organise a second virtual meeting at the end of April 2021 to discuss the experimental results and the lesssons learned.</del> (to be determined)</li>
 					</ul>
 				</div>
 			</div>
