forgot to say that it's a workshop, that's kinda important

--- a/neurips2020.html
+++ b/neurips2020.html
@@ -26,7 +26,7 @@
 			<div class="inner">
 				<span class="icon major style0 fa fa-area-chart"></span>
 				<h2>The <strong style="color:#FCCA46;">pre-registration experiment</strong>: <br>an alternative publication model for machine learning research</h2>
-				<h3><a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a>, December 11</h3>
+				<h3><a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a> workshop, December 11</h3>
                 <p>All the talks and proceedings are publicly available (see below).</p>
 			</div>
 		</section>
