Adds timeline of major events ot neurips 2020 page
- adds dates for submission and acceptance dates

--- a/neurips2020.html
+++ b/neurips2020.html
@@ -154,6 +154,54 @@
 		</section>
         -->
 
+
+        <!-- ------------------------------------------------------------------------------------------------------->
+        <section class="main style1">
+        <div class="container">
+
+        <div class="col-10-medium off-1-medium col-8-large off-2-large col-8-xlarge off-2-xlarge col-8-max off-2-max">
+            <!--<p> </p>-->
+            <header class="major special">
+                <h2>Timeline</h2>
+            </header>
+
+            <div class="table-wrapper">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>9th Oct 2020</td>
+                            <td>Pre-registered paper submission deadline</td>
+                        </tr>
+                        <tr>
+                            <td>19th Oct 2020</td>
+                            <td>Pre-registration reviews available to authors</td>
+                        </tr>
+                        <tr>
+                            <td>31st Oct 2020</td>
+                            <td>Notification of acceptance decisions</td>
+                        </tr>
+                        <tr>
+                            <td>2nd Nov 2020</td>
+                            <td>Camera-ready submission deadline</td>
+                        </tr>
+                        <tr>
+                            <td>11th Dec 2020</td>
+                            <td>The day of the workshop</td>
+                        </tr>
+                        <tr>
+                            <td>7th May 2021</td>
+                            <td>PMLR results paper submission deadline</td>
+                        </tr>
+                        <tr>
+                            <td>7th May 2021</td>
+                            <td>PMLR results paper reviews available to authors</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        </div>
+        </section>
         <!-- ------------------------------------------------------------------------------------------------------->
         <section class="main style1">
         <div class="container">
