Add more important dates.

--- a/neurips2020.html
+++ b/neurips2020.html
@@ -162,39 +162,71 @@
         <div class="col-10-medium off-1-medium col-8-large off-2-large col-8-xlarge off-2-xlarge col-8-max off-2-max">
             <!--<p> </p>-->
             <header class="major special">
-                <h2>Timeline</h2>
+                <h2>Important Dates</h2>
             </header>
 
             <div class="table-wrapper">
                 <table>
                     <tbody>
                         <tr>
+                            <td><b>1) Proposal phase:</b></td>
+                            <td><b>Selection of pre-registered papers for the NeurIPS Workshop</b></td>
+                        </tr>
+                        <tr>
                             <td>9th Oct 2020</td>
-                            <td>Pre-registered paper submission deadline</td>
+                            <td>Paper submission <span style="color:DarkSeaGreen">(authors)</span></td>
+                        </tr>
+                        <tr>
+                            <td>17th Oct 2020</td>
+                            <td>Reviews due <span style="color:CornflowerBlue">(reviewers)</span></td>
                         </tr>
                         <tr>
                             <td>19th Oct 2020</td>
-                            <td>Pre-registration reviews available to authors</td>
+                            <td>Reviews available to authors</td>
+                        </tr>
+                        <tr>
+                            <td>22nd Oct 2020</td>
+                            <td>Rebuttal due <span style="color:DarkSeaGreen">(authors)</span></td>
+                        </tr>
+                        <tr>
+                            <td>27th Oct 2020</td>
+                            <td>Final reviews due <span style="color:CornflowerBlue">(reviewers)</span></td>
                         </tr>
                         <tr>
                             <td>31st Oct 2020</td>
-                            <td>Notification of acceptance decisions</td>
+                            <td>Notification of decisions</td>
                         </tr>
                         <tr>
-                            <td>2nd Nov 2020</td>
-                            <td>Camera-ready submission deadline</td>
+                            <td>27th Nov 2020</td>
+                            <td>Camera ready submission <span style="color:DarkSeaGreen">(authors)</span></td>
                         </tr>
                         <tr>
                             <td>11th Dec 2020</td>
-                            <td>The day of the workshop</td>
+                            <td>NeurIPS 2020 workshop day</td>
+                        </tr>
+                        <tr>
+                            <td><b>2) Results phase:</b></td>
+                            <td><b>Selection of results papers for PMLR</b></td>
                         </tr>
                         <tr>
                             <td>7th May 2021</td>
-                            <td>PMLR results paper submission deadline</td>
+                            <td>Paper submission <span style="color:DarkSeaGreen">(authors)</span></td>
                         </tr>
                         <tr>
-                            <td>7th May 2021</td>
-                            <td>PMLR results paper reviews available to authors</td>
+                            <td>7th June 2021</td>
+                            <td>Reviews due <span style="color:CornflowerBlue">(reviewers)</span></td>
+                        </tr>
+                        <tr>
+                            <td>14th June 2021</td>
+                            <td>Notification of decisions</td>
+                        </tr>
+                        <tr>
+                            <td>28th June 2021</td>
+                            <td>Camera ready submission <span style="color:DarkSeaGreen">(authors)</span></td>
+                        </tr>
+                        <tr>
+                            <td>8th July 2021</td>
+                            <td>PMLR volume published: <a href="http://proceedings.mlr.press/v148/">http://proceedings.mlr.press/v148/</a></td>
                         </tr>
                     </tbody>
                 </table>
