Fixed Alex affiliation

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 					<div class="col-2 col-4-medium">
 						<span class="image fit"><img src="images/alex.png" alt="Alex Hernandez-García"></span>
 						<h5><a href="https://alexhernandezgarcia.github.io/">Alex Hernández-García</a></h5>
-						<h5>MILA</h5>
+						<h5>Mila (Quebec AI Institute) and Université de Montréal</h5>
 					</div>
 					
 					<div class="col-2 col-4-medium">
