--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<section id="header">
 			<div class="inner">
 				<span class="icon major style0 fa fa-area-chart"></span>
-				<h2>The <strong style="color:#FCCA46;">pre-registration workshop</strong>: <br>an alternative publication model for machine learning research</h2>
-				<h3><a href="https://neurips.cc/" target="_blank">NeurIPS 2021</a> (remote); &nbsp; Monday, December 13</h3>
+				<h2>The <strong style="color:#FCCA46;">pre-registration workshop</strong>: <br>An alternative publication model for machine learning research</h2>
+				<h3><a href="https://neurips.cc/" target="_blank">NeurIPS 2021</a> (virtual); &nbsp; Monday, December 13</h3>
 				<h5>Deadline for proposals: <strong style="color:#FCCA46;">September 17</strong> (timezone: Anywhere On Earth)</h5>
 			</div>
 		</section>
@@ -59,10 +59,10 @@
 							<td>&rarr; There are two phases. The first one involves the presentation of paper <i>proposals</i> and will conclude with NeurIPS 2021 workshop day.  The experiment phase will start after the acceptance of the proposals and will continue after the day of the workshop.</td>
                         </tr>
                         <tr>
-							<td>&rarr; The deadline for the proposal is September the 17th. The deadline for the results will be towards the end of April, beginning of May (TBD).</td>
+							<td>&rarr; The deadline for the proposal is September the 17th. The deadline for the results will be towards the end of April, beginning of May 2022 (TBD).</td>
                         </tr>
 						<tr>
-							<td>&rarr; The proposal is non-archival and will be included in the workshop proceedings. The full papers, formed as the collation of proposal and results, will be published as a journal with PMLR.</td>
+							<td>&rarr; The proposal is non-archival and will be included in the workshop proceedings. The full papers, formed as the collation of proposal and results, will each published as a journal in a PMLR volume.</td>
 						</tr>
 
 						<tr>
@@ -73,11 +73,11 @@
 							<td>&rarr; You can submit <a href="https://cmt3.research.microsoft.com/NeurIPSWSPrereg2021/">here via CMT</a>. For your proposals, please use our <a href="https://preregister.science/author-kit/neurips2021_preregistration_template.zip">modified NeurIPS template</a>.</td>
 						</tr>
 						<tr>
-							<td>&rarr; For the proposal, the maximum length is five pages (reference excluded). For the full papers there is not a strict limit, although we recommend to limit the experiments to a maximum extra four pages wrt the proposal.</td>
+							<td>&rarr; For the proposal, the maximum length is five pages (references excluded). For the full papers there is not a strict limit, although we recommend to limit the experiments to a maximum extra four pages with respect to the proposal.</td>
 						</tr>
 
 						<tr>
-							<td>&rarr; For inspiration, have a look at the other sections of this website, which provide further information. Moreover, you can find all the videos and proposals of last year edition <a href="https://preregister.science/neurips2020.html">here</a>, and the just-published PMLR volume with the <i>full papers</i> <a href="http://proceedings.mlr.press/v148/">here</a>.</td>
+							<td>&rarr; For inspiration, have a look at the other sections of this website, which provide further information. Moreover, you can find all the videos and proposals of last year edition <a href="https://preregister.science/neurips2020.html">here</a>, and the PMLR volume with the <i>full papers</i> from 2020 workshop <a href="http://proceedings.mlr.press/v148/">here</a>.</td>
 						</tr>
 
                     </tbody>
@@ -185,9 +185,9 @@
 				</header>
 				<div class="container">
 					<p>
-						<strong>What is pre-registration and how does it improve peer review?</strong>
+						<strong>What is pre-registration and how does it improve peer-review?</strong>
 						Benchmarks on popular datasets have played a key role in the considerable measurable progress that machine learning has made in the last few years.
-						But reviewers can be tempted to prioritize incremental improvements in benchmarks to the detriment of other scientific criteria, destroying many good ideas in their infancy.
+						But reviewers can be tempted to prioritise incremental improvements in benchmarks to the detriment of other scientific criteria, destroying many good ideas in their infancy.
 						Authors can also feel obligated to make orthogonal improvements in order to “beat the state-of-the-art”, making the main contribution hard to assess.
 					</p>
 					<p>
@@ -259,11 +259,11 @@
 					<h2>FAQs</h2>
 				</header>
 				<ul class="spacious">
-					<li><strong>Don't we need a positive publication bias? After all, there many more ideas that don't work than ones that do. Why is it useful to allow negative results?</strong><br>
+					<li><strong>Don't we need a positive publication bias? After all, there are many more ideas that don't work than ones that do. Why is it useful to allow negative results?</strong><br>
 						There are several benefits to publishing negative results.  If an idea is well-motivated and intuitively appealing, it may be needlessly repeated by multiple groups who replicate the negative outcome, but do not have a venue for sharing this knowledge with the community (see the CVPR 2017 workshop on <a href="http://negative.vision/">negative results</a> for a more detailed discussion of the benefits of publishing negative outcomes).
 					</li>
 					<li><strong>Doesn't prior work on existing benchmarks weaken my confirmatory experiments?</strong><br>
-						Yes.  Each prior result reported on a dataset leaks information that reduces its statistical utility (we are strongly in favour of limited-evaluation benchmarks for this reason).  Unfortunately, from a pragmatic perspective, it is infeasible to expect every computer vision researcher to collect a new dataset for each hypothesis they wish to evaluate, so we must strike a reasonable balance here.
+						Yes.  Each prior result reported on a dataset leaks information that reduces its statistical utility (we are strongly in favour of limited-evaluation benchmarks for this reason).  Unfortunately, from a pragmatic perspective, it is infeasible to expect every machine learning researcher to collect a new dataset for each hypothesis they wish to evaluate, so we must strike a reasonable balance here.
 					</li>
 					<li><strong>Is it OK to make changes to the preregistered experimental protocol?</strong><br>
 						Although you should endeavour to follow the proposed experimental protocol as closely as possible, you may find that it is necessary to make small changes or refinements.  These changes should be carefully documented when reporting the experimental results: it is important to make clear which protocols have been modified after observing the evidence.
@@ -278,7 +278,7 @@
 						Both should be reported in the proposal paper as part of the justification for your idea. Neither should be considered by the reader of your paper as providing <em>confirmatory evidence</em> in support of your hypothesis (the goal of preregistration is to make this distinction explicit). By contrast, the confirmatory experimental protocol which you propose should seek to rigorously evaluate your hypothesis and must be performed on different data to your own exploratory experiments. However, for practical reasons, it may use datasets that have also been previously used in the literature (further discussion below).
 					</li>
 					<li><strong>What's the rationale for changing the review model?</strong><br>
-						&ldquo;Preregistration separates hypothesis-generating  (exploratory) from hypothesis-testing (confirmatory) research. Both are important. But the same data cannot be used to generate and test a hypothesis, which can happen unintentionally and reduces the credibility of your results. Addressing this problem through planning improves the quality and transparency of your research, helping others who may wish to build on it.&rdquo; (source: <a href="https://cos.io/prereg/">cos.io</a>)
+						&ldquo;Pre-registration separates hypothesis-generating  (exploratory) from hypothesis-testing (confirmatory) research. Both are important. But the same data should not be used to generate and test a hypothesis, which can happen unintentionally and reduces the credibility of your results. Addressing this problem through planning improves the quality and transparency of your research, helping others who may wish to build on it.&rdquo; (source: <a href="https://cos.io/prereg/">cos.io</a>)
 					</li>
 					<li><strong>Where can I found more information about preregistration?</strong><br>
 						There are a number of good resources for further reading around the ideas related to preregistration, including, but not limited to:
