new research question

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				</header>
 				<div class="container">
                     <h3>Separate the generation and confirmation of hypotheses:</h3>
-					<h4><span class="icon fa-lightbulb-o"></span>&nbsp;&nbsp;&nbsp;Come up with an exciting research question&nbsp;&nbsp;&nbsp;<span class="icon fa-lightbulb-o"></span></h4>
+					<h4><span class="icon fa-lightbulb-o"></span>&nbsp;&nbsp;&nbsp;Come up with a new research question&nbsp;&nbsp;&nbsp;<span class="icon fa-lightbulb-o"></span></h4>
 					<h4><span class="icon fa-pencil"></span>&nbsp;&nbsp;&nbsp;Write a paper proposal without confirmatory experiments&nbsp;&nbsp;&nbsp;<span class="icon fa-pencil"></span></h4>
 					<h4><span class="icon fa-flask"></span>&nbsp;&nbsp;&nbsp;After the paper is accepted, run the experiments and report your results&nbsp;&nbsp;&nbsp;<span class="icon fa-flask"></span></h4>
 				</div>
