reverted. Exciting wasn't bad after all

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				</header>
 				<div class="container">
                     <h3>Separate the generation and confirmation of hypotheses:</h3>
-					<h4><span class="icon fa-lightbulb-o"></span>&nbsp;&nbsp;&nbsp;Come up with a new research question&nbsp;&nbsp;&nbsp;<span class="icon fa-lightbulb-o"></span></h4>
+					<h4><span class="icon fa-lightbulb-o"></span>&nbsp;&nbsp;&nbsp;Come up with an exciting research question&nbsp;&nbsp;&nbsp;<span class="icon fa-lightbulb-o"></span></h4>
 					<h4><span class="icon fa-pencil"></span>&nbsp;&nbsp;&nbsp;Write a paper proposal without confirmatory experiments&nbsp;&nbsp;&nbsp;<span class="icon fa-pencil"></span></h4>
 					<h4><span class="icon fa-flask"></span>&nbsp;&nbsp;&nbsp;After the paper is accepted, run the experiments and report your results&nbsp;&nbsp;&nbsp;<span class="icon fa-flask"></span></h4>
 				</div>
@@ -278,7 +278,7 @@
 						Both should be reported in the proposal paper as part of the justification for your idea. Neither should be considered by the reader of your paper as providing <em>confirmatory evidence</em> in support of your hypothesis (the goal of preregistration is to make this distinction explicit). By contrast, the confirmatory experimental protocol which you propose should seek to rigorously evaluate your hypothesis and must be performed on different data to your own exploratory experiments. However, for practical reasons, it may use datasets that have also been previously used in the literature (further discussion below).
 					</li>
 					<li><strong>What's the rationale for changing the review model?</strong><br>
-						&ldquo;Pre-registration separates hypothesis-generating  (exploratory) from hypothesis-testing (confirmatory) research. Both are important. But the same data should not be used to generate and test a hypothesis, which can happen unintentionally and reduces the credibility of your results. Addressing this problem through planning improves the quality and transparency of your research, helping others who may wish to build on it.&rdquo; (source: <a href="https://cos.io/prereg/">cos.io</a>)
+						&ldquo;Pre-for having a look.registration separates hypothesis-generating  (exploratory) from hypothesis-testing (confirmatory) research. Both are important. But the same data should not be used to generate and test a hypothesis, which can happen unintentionally and reduces the credibility of your results. Addressing this problem through planning improves the quality and transparency of your research, helping others who may wish to build on it.&rdquo; (source: <a href="https://cos.io/prereg/">cos.io</a>)
 					</li>
 					<li><strong>Where can I found more information about preregistration?</strong><br>
 						There are a number of good resources for further reading around the ideas related to preregistration, including, but not limited to:
