make deadline in header more prominent

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 			<div class="inner">
 				<span class="icon major style0 fa fa-area-chart"></span>
 				<h2>The <strong style="color:#FCCA46;">pre-registration workshop</strong>: <br>An alternative publication model for machine learning research</h2>
-				<h3><a href="https://neurips.cc/" target="_blank">NeurIPS 2021</a> (virtual); &nbsp; Monday, December 13</h3>
-				<h5>Deadline for proposals: <strong style="color:#FCCA46;">September 17</strong> (timezone: Anywhere On Earth)</h5>
+				<h4><a href="https://neurips.cc/" target="_blank">NeurIPS 2021</a> &mdash; Monday, December 13</h4>
+				<h3>Deadline for proposals: <strong style="color:#FCCA46;">September 17</strong> (any timezone)</h3>
 			</div>
 		</section>
         
