--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<span class="icon major style0 fa fa-area-chart"></span>
 				<h2>The <strong style="color:#FCCA46;">pre-registration workshop</strong>: <br>An alternative publication model for machine learning research</h2>
 				<h4><a href="https://neurips.cc/" target="_blank">NeurIPS 2021</a> &mdash; Monday, December 13</h4>
-				<h3>Deadline for proposals: <strong style="color:#FCCA46;">September 17</strong> (any timezone)</h3>
+				<h3>Deadline for proposals: <strong style="color:#FCCA46;">September <s>17</s> 19</strong> (any timezone)</h3>
 			</div>
 		</section>
         
@@ -103,7 +103,7 @@
 							<td>&rarr; There are two phases. The first one involves the presentation of paper <i>proposals</i> and will conclude with NeurIPS 2021 workshop day.  The experiment phase will start after the acceptance of the proposals and will continue after the day of the workshop.</td>
                         </tr>
                         <tr>
-							<td>&rarr; The deadline for the proposal is September the 17th. The deadline for the results will be towards the end of April, beginning of May 2022 (TBD).</td>
+							<td>&rarr; The deadline for the proposal is September the 19th. The deadline for the results will be towards the end of April, beginning of May 2022 (TBD).</td>
                         </tr>
 						<tr>
 							<td>&rarr; The proposal is non-archival and will be included in the workshop proceedings. The full papers, formed as the collation of proposal and results, will each published as a journal in a PMLR volume.</td>
@@ -148,11 +148,11 @@
                             <td><h4>Selection of pre-registered papers for the NeurIPS Workshop</h4></td>
                         </tr>
                         <tr>
-                            <td>&emsp;17th Sept 2021</td>
+                            <td>&emsp;19th Sept 2021</td>
                             <td>&emsp;Paper submission <span style="color:DarkSeaGreen">(authors)</span></td>
                         </tr>
                         <tr>
-                            <td>&emsp;18th Sept to 27th Sept 2021</td>
+                            <td>&emsp;20th Sept to 27th Sept 2021</td>
                             <td>&emsp;Review period <span style="color:#ff7b25">(reviewers)</span></td>
                         </tr>
                         <tr>
