--- a/index.html
+++ b/index.html
@@ -160,8 +160,12 @@
                             <td>&emsp;Rebuttal period <span style="color:DarkSeaGreen">(authors)</span></td>
                         </tr>
                         <tr>
-                            <td>&emsp;22nd Oct 2020</td>
+                            <td>&emsp;22nd Oct 2021</td>
                             <td>&emsp;Final decisions</td>
+                        </tr>
+                        <tr>
+                            <td>&emsp;1st Dec 2021</td>
+                            <td>&emsp;Camera ready submission</td>
                         </tr>
                             <td><h4>2) Results phase:</h4></td>
                             <td><h4>Selection of results papers for PMLR journal</h4></td>
