--- a/index.html
+++ b/index.html
@@ -161,11 +161,15 @@
                         </tr>
                         <tr>
                             <td>&emsp;22nd Oct 2021</td>
-                            <td>&emsp;Final decisions</td>
+                            <td>&emsp;Notification of decisions</td>
                         </tr>
                         <tr>
                             <td>&emsp;1st Dec 2021</td>
-                            <td>&emsp;Camera ready submission</td>
+                            <td>&emsp;Camera ready submission <span style="color:DarkSeaGreen">(authors)</span></td>
+                        </tr>
+                        <tr>
+                            <td>&emsp;13th Dec 2021</td>
+                            <td>&emsp;NeurIPS 2021 workshop day</td>
                         </tr>
                             <td><h4>2) Results phase:</h4></td>
                             <td><h4>Selection of results papers for PMLR journal</h4></td>
