make some images more lightweight (jpg and maximum 600px), about 100kb each

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 				<div class="row">
 
 					<div class="col-2 col-4-medium">
-						<span class="image fit"><img src="images/samuel.png" alt="Samuel Albanie"></span>
+						<span class="image fit"><img src="images/samuel.jpg" alt="Samuel Albanie"></span>
 						<h5><a href="https://www.robots.ox.ac.uk/~albanie/">Samuel Albanie</a></h5>
 						<h5>University of Cambridge</h5>
 					</div>
@@ -343,7 +343,7 @@
 					</div>
 
 					<div class="col-2 col-4-medium">
-						<span class="image fit"><img src="images/alex.png" alt="Alex Hernandez-García"></span>
+						<span class="image fit"><img src="images/alex.jpg" alt="Alex Hernandez-García"></span>
 						<h5><a href="https://alexhernandezgarcia.github.io/">Alex Hernández-García</a></h5>
 						<h5>Mila (Quebec AI Institute) and Université de Montréal</h5>
 					</div>
