--- a/neurips2020.html
+++ b/neurips2020.html
@@ -1246,14 +1246,14 @@
 					</div>
 
 					<div class="col-2 col-4-medium">
-						<span class="image fit"><img src="images/samuel.png" alt="Samuel Albanie"></span>
+						<span class="image fit"><img src="images/samuel.jpg" alt="Samuel Albanie"></span>
 						<h3><a href="https://www.robots.ox.ac.uk/~albanie/">Samuel Albanie</a></h3>
 						<p>University of Oxford</p>
 					</div>
 					
 					<div class="col-2 col-4-medium">
 						<span class="image fit">
-							<span class="image fit"><img src="images/michela.png" alt="Michela Paganini"></span>
+							<span class="image fit"><img src="images/michela.jpg" alt="Michela Paganini"></span>
 						</span>
 						<h3><a href="https://mickypaganini.github.io/">Michela Paganini</a></h3>
 						<p>Facebook AI Research</p>
