correct an extremely important typo

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 					<div class="col-2 col-4-medium">
 						<span class="image fit circle"><img src="images/joao.jpg" alt="Jo&atilde;o F. Henriques"></span>
 						<h5><a href="https://www.robots.ox.ac.uk/~joao/">Jo&atilde;o F. Henriques</a></h5>
-						<h5>University of</br>Oxford</h5>
+						<h5>University of Oxford</h5>
 					</div>
 
 <!--					<div class="off-1 col-2 off-0-medium col-4-medium">-->
